force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/SBQQ__Asset__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being covered by a subscription.</description>
        <inlineHelpText>Asset being covered by a subscription.</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>