force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/SBQQ__AssetRootId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AssetRootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains the related asset</description>
        <formula>IF(NOT(ISBLANK(SBQQ__Asset__r.SBQQ__RevisedAsset__r.SBQQ__RootId__c)), SBQQ__Asset__r.SBQQ__RevisedAsset__r.SBQQ__RootId__c, IF(NOT(ISBLANK(SBQQ__Asset__r.SBQQ__RootId__c)), SBQQ__Asset__r.SBQQ__RootId__c, null))</formula>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains the related asset</inlineHelpText>
        <label>Asset Root Id</label>
        <type>Text</type>
    </CustomField>