force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/SBQQ__ContractId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ContractId__c</fullName>
        <description>Identifies the contract for the subscription.</description>
        <formula>SBQQ__Subscription__r.SBQQ__Contract__c</formula>
        <inlineHelpText>Identifies the contract for the subscription.</inlineHelpText>
        <label>Contract Id</label>
        <type>Text</type>
    </CustomField>