force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/SBQQ__Subscription__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Subscription__c</fullName>
        <description>Subscription that covers the asset.</description>
        <inlineHelpText>Subscription that covers the asset.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Subscribed Assets</relationshipLabel>
        <relationshipName>SubscribedAssets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>