force-app/main/default/objects/SBQQ__SubscribedAsset__c/fields/SBQQ__UsageEndDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UsageEndDate__c</fullName>
        <formula>SBQQ__Asset__r.UsageEndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Usage End Date</label>
        <type>Date</type>
    </CustomField>